--- a/blogcodes/src/main/res/layout/activity_large_image_view.xml
+++ b/blogcodes/src/main/res/layout/activity_large_image_view.xml
@@ -7,6 +7,7 @@
     <com.zhy.blogcodes.largeImage.view.LargeImageView
         android:id="@+id/id_largetImageview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="#f00"/>
 
 </RelativeLayout>
